[gd_scene load_steps=10 format=3 uid="uid://be02gb1lcicyt"]

[ext_resource type="Script" uid="uid://1xftv08wx5cb" path="res://Scripts/Singleton/task_manager.gd" id="1_wsdlb"]
[ext_resource type="Texture2D" uid="uid://0ayu2cibaa6b" path="res://Images/board.png" id="1_xtc5h"]
[ext_resource type="FontFile" uid="uid://cs72yg6bk70pc" path="res://fonts/Chalkboard-Regular.ttf" id="2_5qtaj"]
[ext_resource type="Texture2D" uid="uid://cn1g4gx7p2ah4" path="res://Images/Pin.png" id="3_5js0q"]
[ext_resource type="Theme" uid="uid://ddajan8x4gjds" path="res://Scenes/Reusable/NoVisibleScroll.tres" id="3_tv6op"]
[ext_resource type="Theme" uid="uid://bq7tvqjuh4jgj" path="res://Scenes/Reusable/5pxMargin.tres" id="4_tv6op"]
[ext_resource type="FontFile" uid="uid://cpanjy35sky82" path="res://fonts/Russo_One.ttf" id="6_b6v3u"]

[sub_resource type="Theme" id="Theme_tv6op"]
default_font = ExtResource("2_5qtaj")
default_font_size = 0
RichTextLabel/font_sizes/normal_font_size = 82
RichTextLabel/fonts/normal_font = ExtResource("2_5qtaj")

[sub_resource type="Theme" id="Theme_wsdlb"]
RichTextLabel/colors/default_color = Color(0.108246, 0.0101189, 0, 1)
RichTextLabel/colors/font_outline_color = Color(1, 1, 1, 1)
RichTextLabel/font_sizes/normal_font_size = 24
RichTextLabel/fonts/normal_font = ExtResource("6_b6v3u")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsdlb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -3

[node name="Task Overview" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xtc5h")
expand_mode = 1

[node name="Tasks" type="RichTextLabel" parent="CanvasLayer/Task Overview"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 55.0
offset_right = 102.0
offset_bottom = 128.0
grow_horizontal = 2
theme = SubResource("Theme_tv6op")
text = "Tasks
"
scroll_active = false

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Task Overview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -166.0
offset_right = 477.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_tv6op")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Task Overview/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("4_tv6op")
columns = 3

[node name="Task1" type="TextureButton" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5js0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Task1_text" type="RichTextLabel" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer/Task1"]
layout_mode = 0
offset_left = 27.0
offset_top = 58.0
offset_right = 282.0
offset_bottom = 278.0
theme = SubResource("Theme_wsdlb")
horizontal_alignment = 1

[node name="Task2" type="TextureButton" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5js0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Task3" type="TextureButton" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5js0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Task4" type="TextureButton" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5js0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Task5" type="TextureButton" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5js0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Task6" type="TextureButton" parent="CanvasLayer/Task Overview/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5js0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Task Detailed" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2843.0
offset_top = 4.0
offset_right = 2843.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xtc5h")
expand_mode = 1
